Which cards a server can never produce, and a pack that fixes it
Completeness as a computation rather than a promise. A server declares
what it considers obtainable and declares the paths cards come out of;
this says whether the second covers the first, and the remainder becomes
the Archive Pack's sheet - so the long tail is reachable through play and
the archive shrinks as products are added, with nothing curated and
nothing going stale.

A path is anything that can name what it reaches, so a server adding an
acquisition route the mod has never heard of is still audited. "Reaches"
means could produce ever, not is likely to: a card weighted one in ten
thousand is reachable, and conflating the two would call a rare card
unobtainable.

A pack reaches what its arrangements actually draw from, not every sheet
it happens to carry. The failure here is asymmetric and the code is
shaped around that: a card wrongly called uncovered turns up in the
Archive Pack, which is a slightly larger archive; a card wrongly called
covered is a card nobody can ever get, and nothing will say so. So a
sheet no variant names covers nothing, and a config that cannot open at
all covers nothing whatever it carries.

Cards outside the catalogue are not counted as covered either. Excluding
a card is a deliberate visible choice by an admin who wants scarcity, and
an auditor that quietly counted it as satisfied would be arguing with
them about their own configuration.

Writing this found a real bug in the interpreter. The sheets and
arrangements were held in Map.copyOf, whose iteration order is
unspecified and in practice comes out of a hash salted once per launch -
and the opener draws by walking weights until it passes the roll, so the
order decides which card a roll lands on. The same seed would have opened
a different pack every time the game started, which is not a failure
anybody would ever have seen: it passes all day inside one run, and only
a player asking why their pack was different yest